--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
-
-  {
-    "name": "mtgdecklistcreator",
-    "version": "1.0.0",
-    "scripts": {
-      "setup": "npm run setup:client && npm run setup:server",
-      "setup:client": "cd mtgdecklistcreator.client && npm i",
-      "setup:server": "cd mtgdecklistcreator.server && npm i"
-    }
+{
+  "name": "mtgdecklistcreator",
+  "version": "1.0.0",
+  "scripts": {
+    "setup": "npm run setup:client && npm run setup:server",
+    "setup:client": "cd mtgdecklistcreator.client && npm i",
+    "setup:server": "cd mtgdecklistcreator.server && npm i",
+    "start": "node mtgdecklistcreator.server/index.js",
+    "build": "cd mtgdecklistcreator.server && npm i"
   }
-  
+}
